# wildcards-gen

./: .gitignore  AGENTS.md  GSD_SUMMARY.md  IDEAS.md  README.md  debug_shaper.py  embeddings.db  install.bat  install.sh  main.py  output.jsonl  path.stats.json  pyproject.toml  requirements.txt  test_cleaned.yaml  test_coco.yaml
.Jules/: palette.md
.gemini/: GEMINI.md
.github/workflows/: lint.yml  perf.yml
.gsd/: ARCHITECTURE.md  AUDIT.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TODO.md  VERIFICATION.md
.gsd/milestones/: v0.4.0-SUMMARY.md  v0.5.0-SUMMARY.md  v0.6.0-SUMMARY.md  v0.7.0-SUMMARY.md  v0.8.0-SUMMARY.md  v0.9.0-SUMMARY.md
.gsd/phases/0/: 1-PLAN.md  (+3 more)
config_output/: imagenet.yaml
experiments/: tuning_study.yaml  verify_batch.yaml
experiments/verify_results/: batch_report.md
input/: weak.yaml
output/: art_styles.yaml  creatures.yaml  enriched.yaml  imagenet_compact.yaml  imagenet_entity_d4_s2_f500_l10_smart.yaml  imagenet_flat.yaml  imagenet_ultra_flat.yaml  instruments.yaml  oi_bbox.yaml  oi_full.yaml  oi_full_smart.yaml  open_images_animal_d3_smart.yaml  open_images_d3_s1_f1000_l20_smart.yaml  open_images_d4_s2_f500_l10_smart.yaml  openimages_compact.yaml  openimages_compact_v2.yaml  openimages_flat.yaml  openimages_flat_v2.yaml  openimages_ultra_flat.yaml  planets.yaml  skeleton_flat.yaml  smart_imagenet.yaml  tencent_compact.yaml  tencent_flat.yaml  tencent_mlimages_d3_s1_f1000_l20_smart.yaml  tencent_test.yaml  tencent_ultra_flat.yaml  test_imagenet.yaml  test_openimages.yaml  test_tencent.yaml  universal_skeleton.yaml
output_test/: batch_report.md
plans/: batch_processing.md  phase2_interoperability.md  phase3_arranger_investigation.md
scripts/: analyze_study.py  debug_arrangement.py  debug_manual_tencent.py  verify_tencent_integration.py
scripts/linux/: gen_universal.sh  install.sh  lint.sh  run_gui.sh
scripts/windows/: gen_universal.bat  install.bat  run_gui.bat
tests/: conftest.py  test_analytics.py  test_analyze.py  test_api_contracts.py  test_arranger.py  test_arranger_caching.py  test_arranger_persistence.py  test_arranger_recursion.py  test_arranger_umap.py  test_batch.py  test_batch_integration.py  test_benchmark_preview.py  test_cli_compare.py  test_cli_integration.py  test_cli_smoke.py  test_config_integrity.py  test_dataset_fixes.py  test_datasets.py  test_deep_integration.py  test_fast_preview.py  test_gui.py  test_gui_handlers.py  test_gui_info.py  test_gui_refactor.py  test_gui_registry.py  test_imports_walk.py  test_integration_pipeline.py  test_interface_sync.py  test_linter.py  test_shaper.py  test_smart_logic.py  test_smart_overrides.py  test_smoke_clustering.py  test_smoke_datasets.py  test_structure.py  test_structure_extended.py  test_tencent.py  test_tencent_dataloss.py  test_tencent_duplication.py  test_ui_logic.py  (+1 more)
tests/data/: dummy_tencent.csv
wildcards_gen/: __init__.py  batch.py  benchmark.py  cli.py  custom.css  gui.py
wildcards_gen/analytics/: comparator.py  metrics.py
wildcards_gen/core/: __init__.py  analyze.py  arranger.py  builder.py  config.py  linter.py  llm.py  presets.py  progress.py  shaper.py  smart.py  stats.py  structure.py  wordnet.py
(+53 files in other folders)
