[project]
name = "wildcards-gen"
version = "0.1.0"
description = "Generate skeleton YAML files for AI image generation wildcards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.17.0",
    "nltk>=3.8.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.scripts]
wildcards-gen = "wildcards_gen.cli:main"

[project.optional-dependencies]
lint = [
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0",
    "hdbscan>=0.8.33",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wildcards_gen*"]
